prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/same_foreach_kv_names.nut
// EXPECT_ERROR: "foreach() key and value names are the same"
let arr = [1, 2, 3]
foreach (x, x in arr) {
    print(x)
}
